fix Card detail popup display on mobile devices

--- a/css/style_sass.scss
+++ b/css/style_sass.scss
@@ -1435,3 +1435,20 @@ section#board-content{
 		}
 	}
 }
+@media only screen and (max-width: 750px){
+	#card-display-popup{
+		top: 5%;
+		left: 3%;
+		width: 94%;
+	}
+	/** Display the actions menu below information sections */
+	#card-display-popup .popup-body #card-actions {
+		float: none;
+		width: 50%;
+		margin-left: 5%;
+	}
+	#card-display-popup .popup-body #card-information {
+		float: none;
+		width: 100%;
+	}
+}
